crates/diffler/src/ui/snapshots/diffler__ui__popup__tests__confirm_dialog_renders_centered.snap
---
source: crates/diffler/src/ui/popup.rs
expression: terminal.backend()
---
"status screen content behind the popup                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                           ╭ Confirm ───────────────────────╮                                           "
"                                           │Discard changes to src/lib.rs?  │                                           "
"                                           │y confirm   n cancel            │                                           "
"                                           ╰────────────────────────────────╯                                           "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
