crates/diffler/src/ui/snapshots/diffler__ui__popup__tests__input_modal_renders_a_two_line_buffer.snap
---
source: crates/diffler/src/ui/popup.rs
assertion_line: 920
expression: terminal.backend()
---
"status screen content behind the popup                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                         Comment ───────────────────────────────────────────────────────────────                        "
"                        first line                                                                                      "
"                        second                                                                                          "
"                        enter submit  ·  a-enter add newline  ·  esc cancel                                             "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
