crates/diffler/src/ui/snapshots/diffler__ui__popup__tests__input_modal_wraps_a_long_line_onto_multiple_rows.snap
---
source: crates/diffler/src/ui/popup.rs
assertion_line: 936
expression: terminal.backend()
---
"status screen content behind the popup                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                         Comment ───────────────────────────────────────────────────────────────                        "
"                        the quick brown fox jumps over the lazy dog and then keeps on running                           "
"                        well past the right edge of the comment box                                                     "
"                        enter submit  ·  a-enter add newline  ·  esc cancel                                             "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
