crates/diffler/src/ui/snapshots/diffler__ui__popup__tests__popup_wraps_into_columns_when_too_tall_to_fit.snap
---
source: crates/diffler/src/ui/popup.rs
expression: terminal.backend()
---
"status screen content behind the popup                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" Many keys ─────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"Actions                                                                                                                 "
" k0  action_0     k30  action_30                                                                                        "
" k1  action_1     k31  action_31                                                                                        "
" k2  action_2     k32  action_32                                                                                        "
" k3  action_3     k33  action_33                                                                                        "
" k4  action_4     k34  action_34                                                                                        "
" k5  action_5     k35  action_35                                                                                        "
" k6  action_6     k36  action_36                                                                                        "
" k7  action_7     k37  action_37                                                                                        "
" k8  action_8     k38  action_38                                                                                        "
" k9  action_9     k39  action_39                                                                                        "
" k10  action_10   k40  action_40                                                                                        "
" k11  action_11   k41  action_41                                                                                        "
" k12  action_12   k42  action_42                                                                                        "
" k13  action_13   k43  action_43                                                                                        "
" k14  action_14   k44  action_44                                                                                        "
" k15  action_15   k45  action_45                                                                                        "
" k16  action_16   k46  action_46                                                                                        "
" k17  action_17   k47  action_47                                                                                        "
" k18  action_18   k48  action_48                                                                                        "
" k19  action_19   k49  action_49                                                                                        "
" k20  action_20   k50  action_50                                                                                        "
" k21  action_21   k51  action_51                                                                                        "
" k22  action_22   k52  action_52                                                                                        "
" k23  action_23   k53  action_53                                                                                        "
" k24  action_24   k54  action_54                                                                                        "
" k25  action_25   k55  action_55                                                                                        "
" k26  action_26   k56  action_56                                                                                        "
" k27  action_27   k57  action_57                                                                                        "
" k28  action_28   k58  action_58                                                                                        "
" k29  action_29   k59  action_59                                                                                        "
