crates/diffler/src/ui/snapshots/diffler__ui__popup__tests__which_key_panel_renders_the_commit_transient.snap
---
source: crates/diffler/src/ui/popup.rs
expression: terminal.backend()
---
"status screen content behind the popup                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" Commit ────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" Create                                                                                                                 "
" c  Commit                                                                                                              "
" e  Extend                                                                                                              "
" a  Amend                                                                                                               "
" w  Reword                                                                                                              "
